# Instrudio

./: INSTRUDIO_STUDIO_VIOLIN_DEVTO.md  README.md  aria_for_violin_and_piano (1).html
.github/workflows/: build-plugins.yml
Instrudio_v1/: CHANGELOG.md  DEPLOYMENT.md  Instrudio_Score_Example.notes  QA_CHECKLIST.md  README.md  SHA256SUMS.txt  accordion.html  bagpipes.html  bongo.html  guitar.html  harmonica.html  harp.html  index.html  instrudio-suite.js  piano.html  release-manifest.json  saxophone.html  triangle.html  violin.html
Instrudio_v2/: 404.html  DEPLOYMENT.md  SHA256SUMS.txt  accordion.html  bagpipes.html  benchmark.html  bongo.html  guitar.html  harmonica.html  harp.html  index.html  instrudio-suite.js  piano.html  release-manifest.json  saxophone.html  triangle.html  violin.html
Instrudio_v2/app/: README.md  main.js  midi-backend.js  package.json  preload.js
Instrudio_v2/core/: bridge-client.js  definition-runtime.js  midi-io.js  v1-ssot-manifest.json
Instrudio_v2/instrudio_pkg/: CHANGELOG.md  QA_CHECKLIST.md  SHA256SUMS.txt  bagpipes.html  harp.html  release-manifest.json  saxophone.html
Instrudio_v2/instrudio_pkg/core/: definition-runtime.js  v1-ssot-manifest.json
Instrudio_v2/instrudio_pkg/instruments/definitions/: studio_accordion.json  studio_bagpipes.json  studio_grand.json  studio_guitar.json  studio_harmonica.json  studio_triangle.json  studio_violin.json
Instrudio_v2/instrudio_pkg/platform/: README.md
Instrudio_v2/instrudio_pkg/platform/docs/: PRODUCTION_NOTES.md
Instrudio_v2/instrudio_pkg/platform/examples/: xylophone.instrument.json
Instrudio_v2/instrudio_pkg/platform/manifests/: compatibility-matrix.json  release-manifest.json  update-endpoints.example.json
Instrudio_v2/instrudio_pkg/platform/mobile/: entitlement-model.json
Instrudio_v2/instrudio_pkg/platform/schemas/: instrument.schema.json  release-manifest.schema.json
Instrudio_v2/instrudio_pkg/platform/shared/: instrument-catalog.json
Instrudio_v2/instruments/definitions/: celestial_harp.json  studio_bongos.json  studio_grand.json  studio_saxophone.json  studio_violin.json
Instrudio_v2/mobile/: README.md  capacitor.config.json  package.json
Instrudio_v2/mobile/www/: connected-midi.js
Instrudio_v2/platform/docs/: PLATFORM_ARCHITECTURE.md  PRODUCT_ROADMAP.md  UPDATE_FLOW.md  paper-draft.md
Instrudio_v2/platform/manifests/: subscription-tiers.json
Instrudio_v2/platform/plugin/: bridge-contract.json  bridge-server.js
Instrudio_v2/plugin/: .gitignore  CMakeLists.txt
Instrudio_v2/plugin/Source/: BongoVoice.h  HarpVoice.h  PianoVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ViolinVoice.h
Instrudio_v2/repo/: REPO_LAYOUT.md
Instrudio_v2/workers/: wrangler.toml
Instrudio_v2/workers/src/: index.js
